<?xml version="1.0"?>
<package format="2">
  <name>cloud_merge</name>
  <version>0.0.1</version>
  <description>Merge two point clouds into one.</description>
  <maintainer email="iemura-n1207@keio.jp">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <build_depend>PCL</build_depend>
  <exec_depend>PCL</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
